# huggingface-fine-tuning

./: .gitignore  .pmat-gates.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  security.yml
.pmat/: project.toml
docs/: capstone-project.md  outline.md
examples/: requirements.txt
examples/augment/: augment.py  local.py
examples/callback/: classifier-debug.py  classifier-logging.py  classifier.py
examples/custom/: classifier.py  fp16.py  learning_rate.py
examples/imbalance/: check-imbalance.py
examples/inferencing/: classifier-large.py
examples/models/: classifier-msft.py  classifier.py
examples/publishing/: classifier.py
examples/tokenize/: padding.py  truncation.py
examples/training/: classifier.py  inference.py
tests/: __init__.py  test_examples.py
